[package]
name = "proxierr"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
once_cell = "1.19.0"
pingora = { git = "https://github.com/cloudflare/pingora", rev="8ae4ebbf02cb9cf429528e120425a298d7862e57", features = ["lb"] }
thiserror = "1.0"
serde_yml = "0.0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait="0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.7"
matchit = "0.8"
fnv = "1"
tokio = { version = "1", features = ["full"] }
http = "1.1"
mimalloc = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
clap = { version="4.5", features = ["derive"] }
url = "2.5.2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }